@@ -1,3 +1,10 @@
+2010-07-28  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Build fix after recent changes.
+
+        * WebEdit.h: Added.
+        * bindings/python/webview.i:
+
 2010-07-28  Robin Dunn  <robin@alldunn.com>
 
         Reviewed by Kevin Ollivier.
